--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -15,7 +15,7 @@ de:
       navigate_to_categories: 'Kategorien'
       main_categories: Hauptkategorien
     show:
-      what: Worum gehts?
+      what: Worum geht's?
       where: Wo
       assigned_categories: Zugeordnete Kategorien
       next_steps: Was musst du tun?
