--- a/config/locales/pages/de.yml
+++ b/config/locales/pages/de.yml
@@ -293,7 +293,7 @@ de:
           Twitter, über Ihre diesbezüglichen Rechte und Möglichkeiten zum
           Schutz Ihrer Privatsphäre finden Sie in den Datenschutzhinweisen von
           Twitter (%{twitter}).
-        nested_title_four: Whats App
+        nested_title_four: 5.4. Whats App
         nested_text_four: |
           Wir setzen auf unserer Website zudem eine Schaltfläche der WhatsApp
           Inc. 650 Castro Street, Suite 120-219, Mountain View, CA 94041, USA
