fix test suite, improve code style and documentation

--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -72,3 +72,38 @@ de:
         deu: Deutsch
         eng: Englisch
         tur: Türkisch
+        tha: Thai
+        bul: Bulgarisch
+        ron: Rumänisch
+        sqi: Albanisch
+        ara: Arabisch
+        fra: Französisch
+        kur: Kurdisch
+        rus: Russisch
+        srp: Serbisch
+        amh: Amharisch
+        bos: Bosnisch
+        ita: Italienisch
+        hrv: Kroatisch
+        pol: Polnisch
+        por: Portugiesisch
+        vie: Vietnamesisch
+        wol: Wolof
+        fas: Persisch (Farsi)
+        ben: Bengalisch
+        spa: Spanisch
+        tam: Tamil
+        urd: Urdu
+        mul: andere Sprachen auf Anfrage
+        aze: Aserbaidschanisch
+        ell: Griechisch
+        hin: Hindi
+        mkd: Mazedonisch
+        rom: Romanes
+        hun: Ungarisch
+        "568": Niederländisch
+        "326": Ukrainisch
+        "639": Dari
+        "150": Deutsche Gebärdensprache
+        lav: Lettisch
+        lit: Litauisch
