--- a/config/locales/validations/de.yml
+++ b/config/locales/validations/de.yml
@@ -9,6 +9,7 @@ de:
       needs_organizations: benötigt mindestens eine Organisation
       needs_encounter_filters: benötigt mindestens einen Kontaktfilter
       needs_age_filters: benötigt mindestens einen Altersfilter
+      needs_language_filters: benötigt mindestens einen Sprachfilter
       needs_area_when_remote: |
         muss ausgefüllt werden, wenn der Encounter Filter "personal" nicht
         gesetzt wurde
