Minor wording changes

--- a/config/locales/pages/de.yml
+++ b/config/locales/pages/de.yml
@@ -65,7 +65,7 @@ de:
       title: FAQ
 
     privacy:
-      title: Datenschutzerklärung
+      title: Datenschutzhinweise
       intro_first_part: |
         Wir freuen uns über Ihr Interesse an unserer Webseite www.clarat.org und
         an Clarat, einem Projekt der Benckiser Stiftung Zukunft. Wir nehmen den
