--- a/config/locales/pages/de.yml
+++ b/config/locales/pages/de.yml
@@ -76,9 +76,9 @@ de:
         Im Folgenden möchten wir Sie über Art, Umfang und Zweck der Erhebung und
         Verwendung per-sonenbezogener Daten unterrichten. Sie können diese
         Unterrichtung jederzeit auf unserer Webseite abrufen. Die Benckiser
-        Stiftung Zukunft behält sich Änderungen dieser Datenschutzerklärungen
-        vor. Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen,
-        wenn Sie unsere Webseite nach längerer Zeit wieder besuchen.
+        Stiftung Zukunft behält sich Änderungen dieser Datenschutzhinweise vor.
+        Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn
+        Sie unsere Webseite nach längerer Zeit wieder besuchen.
       chapter_one:
         title: 1. Ermöglichung der Inanspruchnahme unseres Webseitenangebots
         text: |
