--- a/config/locales/offers/de.yml
+++ b/config/locales/offers/de.yml
@@ -13,7 +13,7 @@ de:
       location_everywhere: Überall erreichbar, egal, wo du bist
       navigate_to_categories: 'Kategorien'
       main_categories: Hauptkategorien
-      all_categories: Alle Kategorien
+      all_categories: ‹ Alle Kategorien
     show:
       what: Worum geht's?
       where: Wo
