Restyled mobile filter form

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -103,3 +103,4 @@ de:
       anchor: 'Alle ansehen >>'
     more_filter_options: 'Mehr Filter anzeigen'
     less_filter_options: 'Weniger Filter anzeigen'
+    mobile_filter: 'Ergebnisse filtern'
