Improve organization.show (integrate map in address box)

--- a/config/locales/shared/de.yml
+++ b/config/locales/shared/de.yml
@@ -32,5 +32,4 @@ de:
       beta_modal_contact_link: schreibe uns einfach eine Nachricht.
     show:
       cta_report_errors: |
-        Sind die hier dargestellten Informationen fehlerhaft oder unvollständig,
-        lass es uns bitte wissen!
+        Enthält dieser Eintrag Fehler?
