--- a/config/locales/organizations/de.yml
+++ b/config/locales/organizations/de.yml
@@ -2,5 +2,5 @@ de:
   organizations:
     show:
       who: Wer hilft dir?
-      where: Wo
+      where: Wo ist die Organisation?
       offers_all: Welche Hilfe bietet diese Organisation?
