--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -108,3 +108,8 @@ de:
     more_filter_options: 'Mehr Filter anzeigen'
     less_filter_options: 'Weniger Filter anzeigen'
     mobile_filter: 'Ergebnisse filtern'
+    ajax_error:
+      error: "Suchfehler"
+      message: |
+        Tut uns leid, es ist ein Fehler bei der Suche aufgetreten. Wenn dieses
+        Problem wiederholt auftritt, kontaktiere uns bitte.
