--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -113,3 +113,22 @@ de:
       message: |
         Tut uns leid, es ist ein Fehler bei der Suche aufgetreten. Wenn dieses
         Problem wiederholt auftritt, kontaktiere uns bitte.
+    query_field:
+      placeholder_words:
+        - Adoption
+        - Drogen
+        - Gewalt
+        - Nachhilfe
+        - Notfall
+        - Recht
+        - Waise
+        - arbeitslos
+        - essen
+        - krank
+        - obdachlos
+        - rauchen
+        - schwanger
+        - schwul
+        - schwänzen
+        - wohnen
+      example_placeholder: "z.B. %{word}, …"
