--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -2,70 +2,92 @@ de:
   pages:
 
     home:
-      title: Unterstützungsangebote für Kinder, Jugendliche und Familien
-      section:
-        how:
-          title: Wie funktioniert clarat?
-          text: |
-            Sämtliche Unterstützungsangebote für Kinder, Jugendliche und Familien in Deiner Nähe.
-            Gib Dein Anliegen ein und finde das Angebot, das Dir wirklich weiter hilft.
-            Wir sagen Dir auch noch, was Du als nächstes tun musst, um das Angebot zu nutzen.
-        whom:
-          title: Für wen ist clarat?
-          text: |
-            clarat ist für alle da. Vor allem für Familien, Jugendliche und Kinder auf der Suche nach Unterstützung.
-            Aber auch für Menschen, die erkennen, dass ein anderer Mensch Hilfe braucht.
-            Erzieher zum Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden und dann hin.
-        why:
-          title: Warum gibt es clarat?
-          text: |
-            In Deutschland gibt es viele Unterstützungsangebote für Kinder, Jugendliche und Familien.
-            Allerdings sind diese selten leicht zu finden. Mit clarat helfen wir Dir, schnell und unkompliziert
-            zum passenden Angebot in deiner Nähe zu kommen.
+      title: "Unterstützungsangebote für Kinder, Jugendliche und Familien"
+      how:
+        heading: "Wie funktioniert clarat?"
+        text: |
+          Sämtliche Unterstützungsangebote für Kinder, Jugendliche und
+          Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das
+          Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was
+          Du als nächstes tun musst, um das Angebot zu nutzen.
+      whom:
+        heading: "Für wen ist clarat?"
+        text: |
+          clarat ist für alle da. Vor allem für Familien, Jugendliche und
+          Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die
+          erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum
+          Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden
+          und dann hin.
+      why:
+        heading: "Warum gibt es clarat?"
+        text: |
+          In Deutschland gibt es viele Unterstützungsangebote für Kinder,
+          Jugendliche und Familien. Allerdings sind diese selten leicht zu
+          finden. Mit clarat helfen wir Dir, schnell und unkompliziert zum
+          passenden Angebot in deiner Nähe zu kommen.
+
     not_found:
-      heading: 'Leider konnten wir diese Seite nicht finden.'
+      title: "404"
+      heading: "Leider konnten wir diese Seite nicht finden."
       description: |
         Bitte nutze den Zurück-Knopf deines Browsers und versuche es mit einem
         anderen Link oder probiere es mit der Suchfunktion.
 
     agb:
-      title: Rechtliche Hinweise
-      text: |
-        Diese Webseite wurde mit größtmöglicher Sorgfalt erstellt. Die Benckiser Stiftung Zukunft
-        („clarat“ oder „wir“) übernimmt jedoch keine Gewähr in Bezug auf die Vollständigkeit, die
-        Aktualität, die Verfügbarkeit sowie die Richtigkeit der auf dieser Webseite angebotenen
-        Informationen und Links. Die Webseite ist ausschließlich für den privaten Gebrauch bestimmt,
-        eine Nutzung zu eigenen kommerziellen Zwecken ist unzulässig.
-
-        Wir weisen vorsorglich darauf hin, dass die Informationen auf der Webseite Ungenauigkeiten
-        und Fehler enthalten können und dass eine Haftung für solche Ungenauigkeiten oder Fehler
-        grundsätzlich ausgeschlossen ist. Wir weisen ferner ausdrücklich darauf hin, dass es in
-        Ihrer eigenen Verantwortung liegt, sicherzustellen, dass die Serviceleistungen oder
-        Informationen, die Sie über unsere Webseite beziehen, Ihren speziellen Anforderungen
-        genügen. Die Informationen auf unserer Webseite stellen keine rechtlichen Zusicherungen dar und es können aus ihnen keine Rechtsansprüche abgeleitet werden.
-
+      title: "Rechtliche Hinweise"
+      heading: "Rechtliche Hinweise"
+      text_html: |
+        <p>
+        Diese Webseite wurde mit größtmöglicher Sorgfalt erstellt. Die Benckiser
+        Stiftung Zukunft („clarat“ oder „wir“) übernimmt jedoch keine Gewähr in
+        Bezug auf die Vollständigkeit, die Aktualität, die Verfügbarkeit sowie
+        die Richtigkeit der auf dieser Webseite angebotenen Informationen und
+        Links. Die Webseite ist ausschließlich für den privaten Gebrauch
+        bestimmt, eine Nutzung zu eigenen kommerziellen Zwecken ist unzulässig.
+        </p>
+        <p>
+        Wir weisen vorsorglich darauf hin, dass die Informationen auf der
+        Webseite Ungenauigkeiten und Fehler enthalten können und dass eine
+        Haftung für solche Ungenauigkeiten oder Fehler grundsätzlich
+        ausgeschlossen ist. Wir weisen ferner ausdrücklich darauf hin, dass es
+        in Ihrer eigenen Verantwortung liegt, sicherzustellen, dass die
+        Serviceleistungen oder Informationen, die Sie über unsere Webseite
+        beziehen, Ihren speziellen Anforderungen genügen. Die Informationen auf
+        unserer Webseite stellen keine rechtlichen Zusicherungen dar und es
+        können aus ihnen keine Rechtsansprüche abgeleitet werden.
+        </p>
+        <p>
         Die Webseite kann jederzeit ohne Benachrichtigung geändert werden.
-
-        Die Inhalte der Webseite wurden von oder für clarat erstellt. Das Urheberrecht und sonstige
-        Schutzrechte an den Inhalten unserer Webseite stehen clarat oder demjenigen zu, der uns daran
-        Nutzungsrechte eingeräumt hat. Dies bezieht sich unter anderem, aber nicht ausschließlich,
-        auf das Design, das Layout, die Texte sowie Abbildungen, Bilder und Grafiken. Wir
-        widersprechen einer vollständigen oder teilweisen Speicherung, Vervielfältigung und/oder
-        Veröffentlichung und behalten uns rechtliche Schritte vor, sofern eine solche ohne unsere
+        </p>
+        <p>
+        Die Inhalte der Webseite wurden von oder für clarat erstellt. Das
+        Urheberrecht und sonstige Schutzrechte an den Inhalten unserer Webseite
+        stehen clarat oder demjenigen zu, der uns daran Nutzungsrechte
+        eingeräumt hat. Dies bezieht sich unter anderem, aber nicht
+        ausschließlich, auf das Design, das Layout, die Texte sowie Abbildungen,
+        Bilder und Grafiken. Wir widersprechen einer vollständigen oder
+        teilweisen Speicherung, Vervielfältigung und/oder Veröffentlichung und
+        behalten uns rechtliche Schritte vor, sofern eine solche ohne unsere
         Genehmigung erfolgt.
-
-        Soweit auf andere Domains oder Webseiten hingewiesen oder mittels eines Hyperlinks verlinkt
-        wird, sind wir für den Inhalt solcher Webseiten nicht verantwortlich, übernehmen dafür
-        keine Gewähr und machen uns den Inhalt solcher Webseiten nicht zu Eigen.
-
-        Die rechtlichen Hinweise auf dieser Webseite sowie alle Fragen und Streitigkeiten im
-        Zusammenhang mit dieser Webseite unterliegen dem Recht der Bundesrepublik Deutschland.
-
+        </p>
+        <p>
+        Soweit auf andere Domains oder Webseiten hingewiesen oder mittels eines
+        Hyperlinks verlinkt wird, sind wir für den Inhalt solcher Webseiten
+        nicht verantwortlich, übernehmen dafür keine Gewähr und machen uns den
+        Inhalt solcher Webseiten nicht zu Eigen.
+        </p>
+        <p>
+        Die rechtlichen Hinweise auf dieser Webseite sowie alle Fragen und
+        Streitigkeiten im Zusammenhang mit dieser Webseite unterliegen dem Recht
+        der Bundesrepublik Deutschland.
+        </p>
     faq:
-      title: FAQ
+      title: "Häufige Fragen"
+      heading: "FAQ"
 
     privacy:
-      title: Datenschutzhinweise
+      title: "Datenschutz"
+      heading: "Datenschutzhinweise"
       intro_first_part: |
         Wir freuen uns über Ihr Interesse an unserer Webseite www.clarat.org und
         an Clarat, einem Projekt der Benckiser Stiftung Zukunft. Wir nehmen den
@@ -80,7 +102,7 @@ de:
         Es empfiehlt sich daher, die Datenschutzweise erneut aufzurufen, wenn
         Sie unsere Webseite nach längerer Zeit wieder besuchen.
       chapter_one:
-        title: 1. Ermöglichung der Inanspruchnahme unseres Webseitenangebots
+        heading: "1. Ermöglichung der Inanspruchnahme unseres Webseitenangebots"
         text: |
           Wenn Sie die Angebote unserer Webseiten abrufen, erheben und speichern
           wir folgende Nutzungsdaten, um Ihnen die Nutzung zu ermöglichen:
@@ -94,7 +116,7 @@ de:
           nur auf Ihren Wunsch und mit Ihrer ausdrücklichen Einwilligung
           zusenden).
       chapter_two:
-        title: |
+        heading: |
           2. Von Ihnen freiwillig zur Verfügung gestellte personenbezogene Daten
         text: |
           Wenn Sie uns über das Formular zur Anmeldung für unseren Newsletter
@@ -105,18 +127,18 @@ de:
           und nutzen wir diese Angaben nur zur Erbringung der jeweils
           angefragten Leistungen (etwa zur Beantwortung Ihrer Fragen oder zur
           Zusendung unseres Newsletters).
-        nested_title_one: 2.1 Kontaktformular
+        nested_title_one: "2.1 Kontaktformular"
         nested_text_one: |
           Die mittels des Kontaktformulars bzw. einer Live-Chat-Funktion zur
           Verfügung gestellten personenbezogenen Daten werden wir ausschließlich
           zur Erbringung der jeweils angefrag-ten Leistung verwenden.
-        nested_title_two: 2.2 Newsletter-Anmeldung
+        nested_title_two: "2.2 Newsletter-Anmeldung"
         nested_text_two: |
           Die mittels des Formulars zur Newsletter-Anmeldung zur Verfügung
           gestellten personenbe-zogenen Daten werden wir nutzen, um Ihnen
           gelegentlich E-Mails mit Informationen über neue oder spezielle
           Angebote zuzusenden.
-        nested_title_three: 2.3 Standortdaten
+        nested_title_three: "2.3 Standortdaten"
         nested_text_three: |
           Wenn der von Ihnen verwendete Browser die Funktion „standortbezogenes
           Surfen“ unterstützt und Sie diese Funktion in Ihrem Browser verwenden,
@@ -128,7 +150,7 @@ de:
           entnehmen Sie bitte den jeweiligen Datenschutz- bzw.
           Nutzungsbestimmungen Ihres Browsers.
       chapter_three:
-        title: 3. Informationen über Ihr Nutzungsverhalten
+        heading: "3. Informationen über Ihr Nutzungsverhalten"
         text: |
           Da wir unsere Angebote den Bedürfnissen unserer Nutzer optimal
           anpassen möchten, benö-tigen wir Informationen über das allgemeine
@@ -142,7 +164,7 @@ de:
           oder eine Nutzung für andere Zwecke erfolgt nicht. Der Verwendung
           Ihrer personenbezogenen Daten zur Erstellung von Nutzungsprofilen
           können Sie jederzeit widersprechen.
-        nested_title_one: 3.1 Analyse
+        nested_title_one: "3.1 Analyse"
         nested_text_one: |
           Diese Webseite benutzt Google Analytics, einen Webanalysedienst der
           Google Inc. (“Google”). Google Analytics verwendet sog. “Cookies”,
@@ -200,7 +222,7 @@ de:
           %{optimizely_privacy}. Sie können das Optimizely-Tracking
           jederzeit deaktivieren, indem Sie der Anleitung auf
           %{optimizely_optout} folgen
-        nested_title_two: 3.2 Cookies
+        nested_title_two: "3.2 Cookies"
         nested_text_two: |
           Cookies sind kleine Text-Dateien, die auf Ihrer Festplatte gespeichert
           werden können, wenn Sie eine Webseite besuchen. Diese Text-Dateien
@@ -227,7 +249,7 @@ de:
           möchten Sie jedoch darauf hinweisen, dass Sie dadurch die
           Funktionsfähigkeit dieser Webseite beeinträchtigen können.
       chapter_four:
-        title: 4. Einbindung von Diensten Dritter
+        heading: "4. Einbindung von Diensten Dritter"
         text: |
           Soweit wir die Dienste Dritter in unsere Webseite einbinden (etwa
           Kartenmaterial von Google Maps), so hängt die Nutzung dieser Dienste
@@ -236,11 +258,11 @@ de:
           Informationen zur Erhebung und Nutzung der Daten durch die
           Drittanbieter finden Sie in deren jeweiligen Datenschutzhinweisen.
       chapter_five:
-        title: 5. Social Media Plugins
+        heading: "5. Social Media Plugins"
         text: |
           Auf dieser Webseite werden Plugins von sozialen Netzwerken nach den
           folgenden Maßgaben verwendet:
-        nested_title_one: 5.1 Facebook
+        nested_title_one: "5.1 Facebook"
         nested_text_one: |
           Wir verwenden Plugins des sozialen Netzwerks facebook.com, welches von
           der Facebook Inc., 1601 S. California Ave, Palo Alto, CA 94304, USA
@@ -262,7 +284,7 @@ de:
           Facebook, über Ihre diesbezüglichen Rech-te und Möglichkeiten zum
           Schutz Ihrer Privatsphäre finden Sie in den Datenschutzhinweisen von
           Facebook (%{facebook}).
-        nested_title_two: 5.2 Google+
+        nested_title_two: "5.2 Google+"
         nested_text_two: |
           Wir verwenden Social Plugins von Google. Klicken Sie auf den
           Google+1-Button, werden Sie in einem neuen Fenster zur Anmeldung bei
@@ -277,7 +299,7 @@ de:
           über Ihre diesbezüglichen Rechte und Möglichkeiten zum Schutz Ihrer
           Privatsphäre finden Sie in den Datenschutzhinweisen von Google+1
           (%{google}).
-        nested_title_three: 5.3 Twitter
+        nested_title_three: "5.3 Twitter"
         nested_text_three: |
           Wir verwenden Social Plugins von Twitter Inc., 795 Folsom St., Suite
           600, San Franscisco, CA 94107, USA („Twitter“). Klicken Sie auf den
@@ -293,7 +315,7 @@ de:
           Twitter, über Ihre diesbezüglichen Rechte und Möglichkeiten zum
           Schutz Ihrer Privatsphäre finden Sie in den Datenschutzhinweisen von
           Twitter (%{twitter}).
-        nested_title_four: 5.4. Whats App
+        nested_title_four: "5.4. Whats App"
         nested_text_four: |
           Wir setzen auf unserer Website zudem eine Schaltfläche der WhatsApp
           Inc. 650 Castro Street, Suite 120-219, Mountain View, CA 94041, USA
@@ -306,14 +328,15 @@ de:
           möchte und dass die Schaltfläche von unserer Website aus aufgerufen
           wurde.
       chapter_six:
-        title: 6. Datenlöschung
+        heading: "6. Datenlöschung"
         text: |
           Soweit in diesen Hinweisen zum Datenschutz nichts anderes bestimmt
           ist, löschen wir Ihre Daten spätestens drei Monate nach Wegfall des
           Zwecks der Speicherung, soweit wir gesetzlich nicht zu einer
           weitergehenden Speicherung verpflichtet sind.
       chapter_seven:
-        title: 7. Sicherheit und Kontrolle über Ihre Daten, externe Dienstleister
+        heading: |
+          7. Sicherheit und Kontrolle über Ihre Daten, externe Dienstleister
         text: |
           Die Sicherheit Ihrer Daten ist uns sehr wichtig. Um unerlaubte
           Zugriffe oder Veröffentli-chung zu verhindern, haben wir physische,
@@ -331,7 +354,7 @@ de:
           erfolgt eine Weitergabe von Daten an Dritte nur, wenn Sie eingewilligt
           haben oder wir hierzu rechtlich verpflichtet sind.
       chapter_eight:
-        title: 8. Recht auf Widerspruch und Ansprechpartner
+        heading: "8. Recht auf Widerspruch und Ansprechpartner"
         text: |
           Sie haben jederzeit das Recht der oben beschriebenen Verwendung Ihrer
           Daten zu widersprechen und/oder Ihre erteilte Einwilligung mit Wirkung
@@ -346,19 +369,36 @@ de:
 
 
     impressum:
-      title: Impressum
+      title: "Impressum"
+      heading: "Impressum"
+
+      responsible_html: |
+        Vorstand<br/>
+        Dr. Dr. Christoph Glaser<br/>
+        (verantwortlich für den Inhalt der Website)
 
     about:
-      title: Über uns
+      title: "Über Uns"
+      heading: "Über uns"
+      text: |
+        clarat ist ein Projekt der gemeinnützigen Benckiser Stiftung Zukunft
+        (www.benckiser-stiftung.org). Mit der Benckiser Stiftung fördern wir
+        seit vielen Jahren Projekte der Kinder- und Jugendförderung. Dabei fiel
+        uns eines immer wieder auf: Es ist schwer herauszufinden, welche
+        Unterstützungsangebote es überhaupt gibt. Und dann wurde uns etwas klar:
+        Wenn es für uns als „Experten“ schon so schwer ist, einen Überblick zu
+        bekommen, wie schwer muss es dann für Kinder, Jugendliche und Familien
+        sein, die wirklich Hilfe brauchen? Die Antwort ist: Sehr schwer! Und
+        damit war die Idee zu clarat geboren: Einfach Hilfe finden. Für alle.
+        Überall.
 
-    address:
-      name: Benckiser Stiftung Zukunft
-      street: Französische Straße 47
-      zip_city: 10117 Berlin
-      telephone: Tel +49 (0)30 55 57 96 00
-      fax: Fax +49 (0)30 55 57 96 09 9
-      email: |
-        %{mailto}
-
-
-
+    shared:
+      address:
+        name: "Clarat"
+        name2: "Projekt der Benckiser Stiftung Zukunft"
+        street: "Französische Straße 47"
+        zip_city: "10117 Berlin"
+        telephone: "Tel +49 (0)30 55 57 96 00"
+        fax: "Fax +49 (0)30 55 57 96 09 9"
+        email: |
+          %{mailto}
