--- a/config/locales/models/organization/de.yml
+++ b/config/locales/models/organization/de.yml
@@ -4,4 +4,4 @@ de:
       approved_by_creator: 'kann nicht von dem/der Ersteller/in gesetzt werden'
       incomplete: |
         kann nicht angehakt werden, wenn nicht auch "Completed" gesetzt ist
-      no_hq_location: 'Es muss mindestens eine HQ-Location zugeorndet werden'
+      hq_location: 'Es muss genau eine HQ-Location zugeorndet werden'
