--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,83 +1,5 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
+# Please see ./README.md for more information on I18n styles and structure.
 en:
-  activerecord:
-    models:
-      offer:
-        one: Offer
-        other: Offers
-      location:
-        one: Location
-        other: Locations
-      organization:
-        one: Organization
-        other: Organizations
-      category:
-        one: Category
-        other: Categories
-      federal_state:
-        one: Federal State
-        other: Federal States
-      opening:
-        one: Opening Hours
-        other: Opening Hours
-      user:
-        one: User
-        other: Users
-      contact:
-        one: Contact Form Submission
-        other: Contact Form Submissions
-      subscription:
-        one: Newsletter Subscription
-        other: Newsletter Subscriptions
-      website:
-        one: Website
-        other: Websites
-      hyperlink:
-        one: Hyperlink
-        other: Hyperlinks
-      search_location:
-        one: Search Location
-        other: Search Locations
-      update_request:
-        one: Request for Location Updates
-        other: Requests for Location Updates
-      area:
-        one: Area
-        other: Areas
-  i18n:
-    transliterate:
-      rule:
-        ä: "ae"
-        ö: "oe"
-        ü: "ue"
-        ß: "ss"
-  views:
-    pagination:
-      first: 'First'
-      previous: 'Previous'
-      truncate: '…'
-      next: 'Next'
-      last: 'Last'
   conf: # translations used for app-internal things
     current_location: 'My Location'
   js:
