for #302 - add new encounters that will be replacements for 'online'

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -39,7 +39,10 @@ de:
         encounters:
           personal: "Persönlich"
           hotline: "Telefonisch"
-          online: "Online"
+          online: "TODO! (Online)" # TODO: remove later, see #302
+          email: "Email"
+          chat: "Chat"
+          forum: "Forum"
 
       pending_ajax:
         searching: "Suche…"
