--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -19,13 +19,19 @@ de:
         versuche gegebenenfalls mit einer alternativen Eingabe
         (z.B. "Postleitzahl Ort").
 
+    map:
+      show_on_big_map: "Auf großer Karte anzeigen"
+      enlarge_map: "Karte vergrößern"
+      headline_small_map: "Vor-Ort-Angebote auf der Karte"
+
     index:
       location_fallback: |
         Du hast keinen Ort angegeben, deswegen (ver)suchen wir's in Berlin.
 
+
       # index partials
       search_results:
-        more: "(Mehr …)"
+        more: "Mehr…"
         personal_offers:
           zero: "Keine Vor-Ort-Angebote"
           one: "Ein Vor-Ort-Angebot"
@@ -34,6 +40,7 @@ de:
           zero: "Keine Telefon- und Onlineberatungen"
           one: "Eine Telefon- oder Onlineberatung"
           other: "%{count} Telefon- und Onlineberatungen"
+
 
       single_search_result:
         encounters:
