--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -83,7 +83,7 @@ de:
         </p>
     faq:
       title: "Häufige Fragen"
-      heading: "FAQ"
+      heading: "Häufige Fragen"
 
     privacy:
       title: "Datenschutz"
