Adding content to the about page

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -391,6 +391,89 @@ de:
         sein, die wirklich Hilfe brauchen? Die Antwort ist: Sehr schwer! Und
         damit war die Idee zu clarat geboren: Einfach Hilfe finden. Für alle.
         Überall.
+      amina: |
+        Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie
+        sieht schnell, was wichtig ist. Bei clarat ist sie im Research-Team. Sie
+        kümmert sich besonders um Online- und Telefonangebote. Ihr Lieblingssong
+        ist La Prima Estate - Erlend Oye.
+      andrea: |
+        Hat Interkulturelles Management studiert. Das heißt, sie weiß viel über
+        Wirtschaft und Kultur. Sie arbeitet sehr genau. Bei clarat ist sie im
+        Research-Team. Sie sichert die Qualität unserer Arbeit. Ihr
+        Lieblingssong ist Work Me von The Black Keys.
+      anne: |
+        Hat Wirtschaft und Internationale Beziehungen studiert. Sie kann sehr
+        schnell logisch denken. Bei clarat ist sie der Boss. Sie kümmert sich um
+        das ganze Team und sie organisiert alles. Ihr Lieblingssong ist Denken
+        Sie Groß von Deichkind.
+      basti: |
+        Ist Web-Developer. Das heißt, er kann gut Internetseiten programmieren.
+        Bei clarat ist er der IT-Chef. Leider ist er musikalisch in den 80er
+        Jahren hängen geblieben, daher ist sein Lieblingssong auch immer noch
+        Man In The Mirror von Michael Jackson.
+      elisa: |
+        Ist Kulturwissenschaftlerin. Das heißt, sie weiß viel über Kultur. Sie
+        kann Schweres einfach erklären. Bei clarat ist sie im Research-Team. Sie
+        kümmert sich auch ums Lexikon und die Nutzer. Ihr Lieblingssong ist Boat
+        Behind von Kings of Convenience.
+      janina: |
+        Ist Kulturanthropologin. Das heißt, sie weiß viel über Menschen und
+        Kulturen. Sie kann gut schreiben. Bei clarat ist sie im Research-Team.
+        Sie ist Expertin für die clarat-Sprache und hilft unseren Nutzern
+        weiter. Ihr Lieblingssong ist MFG von Fanta4.
+      jens: |
+        Ist Erziehungswissenschaftler. Das heißt, er kennt sich gut aus mit
+        Bildung. Er versteht komplizierte Sachen schnell. Bei clarat ist er im
+        Research-Team. Und er entscheidet, welche Angebote zu clarat gehören.
+        Sein Lieblingssong ist 2B2 von Lambchop.
+      jule: |
+        Ist Friedens- und Konfliktforscherin. Das heißt, sie weiß viel über
+        Konflikte und Krieg. Sie kann gut Lösungen finden. Bei clarat ist sie im
+        Research-Team und überprüft alle Infos für die Internetseite. Ihr
+        Lieblingssong ist Home von Edward Sharpe.
+      julia: |
+        Ist Germanistin. Das heißt, sie kennt sich gut mit Texten und mit
+        Deutsch aus. Sie kann gut schreiben und Sachen leicht erklären. Bei
+        clarat ist sie im Research-Team und Expertin für die clarat-Sprache. Ihr
+        Lieblingssong ist Reckoner von Radiohead.
+      julian: |
+        Ist Sozialökonom. Das heißt, er weiß viel über die Wirtschaft und die
+        Gesellschaft. Er kennt sich gut aus mit Computern. Bei clarat ist er im
+        Research-Team und kümmert sich um technische Dinge. Sein Lieblingssong
+        ist All You Need von Sublime.
+      konstantin: |
+        ist Web-Developer. Das heißt, er kann gut Internetseiten programmieren.
+        Er findet immer gute Lösungen. Bei clarat ist er im IT-Team und macht
+        unsere Internetseite. Sein Liebslingssong ist Too Long von Daft Punk.
+      lisa: |
+        Ist Design Thinkerin. Das heißt, sie kann kreativ Projekte planen. Bei
+        clarat ist sie im Research-Team, macht Pläne und kümmert sich um die
+        Nutzer. Ihr Lieblingssong ist Another Day von Jamie Lidell.
+      marcus: |
+        Ist Web-Designer. Das heißt, er kann Internetseiten programmieren und
+        gestalten. Er ist auch ein guter Planer. Bei clarat ist er im IT-Team.
+        Er sorgt dafür, dass unsere Internetseite schön aussieht. Sein
+        Lieblingssong ist Hysteria von MUSE.
+      nicole: |
+        Hat Interkulturelle Kommunikation studiert. Das heißt, sie weiß viel
+        über Kulturen und Sprache. Sie kann gut Entscheidungen treffen. Sie ist
+        Leiterin des Research-Teams. Ihr Lieblingssong ist Palabra Mi Amor von
+        Shaka Ponk.
+      stefan: |
+        Ist Kulturwissenschaftler. Das heißt, er weiß viel über Kultur und
+        Gesellschaft. Er kann Menschen sehr gut für eine Sache begeistern. Und
+        er ist der Erfinder von clarat. Sein Lieblingssong ist Riders On The
+        Storm von The Doors.
+      verena: |
+        Ist Politikwissenschaftlerin. Das heißt, sie weiß viel über Politik und
+        Gesellschaft. Sie kann sehr gut Informationen sammeln. Bei clarat ist
+        sie im Research-Team und kümmert sich um unser Lexikon. Ihr
+        Lieblingssong ist Lose It von Oh Wonder.
+
+
+
+
+
 
     shared:
       address:
