--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -408,9 +408,9 @@ de:
         Sie Groß von Deichkind.
       basti: |
         Ist Web-Developer. Das heißt, er kann gut Internetseiten programmieren.
-        Bei clarat ist er der IT-Chef. Leider ist er musikalisch in den 80er
-        Jahren hängen geblieben, daher ist sein Lieblingssong auch immer noch
-        Man In The Mirror von Michael Jackson.
+        Bei clarat ist er der IT-Chef. Er hilft uns bei technischen Fragen. Und
+        er kümmert sich um Urlaub und Verträge. Sein Lieblingssong ist Man In
+        The Mirror von Michael Jackson.
       elisa: |
         Ist Kulturwissenschaftlerin. Das heißt, sie weiß viel über Kultur. Sie
         kann Schweres einfach erklären. Bei clarat ist sie im Research-Team. Sie
