--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -442,7 +442,7 @@ de:
         Research-Team und kümmert sich um technische Dinge. Sein Lieblingssong
         ist All You Need von Sublime.
       konstantin: |
-        ist Web-Developer. Das heißt, er kann gut Internetseiten programmieren.
+        Ist Web-Developer. Das heißt, er kann gut Internetseiten programmieren.
         Er findet immer gute Lösungen. Bei clarat ist er im IT-Team und macht
         unsere Internetseite. Sein Liebslingssong ist Too Long von Daft Punk.
       lisa: |
