Minor wording change

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -137,7 +137,7 @@ de:
           sat: Samstag
           sun: Sonntag
       website_section:
-        internet_presence: "Im Netz"
+        internet_presence: "Wo erfährst du mehr im Netz?"
         websites:
           own: "Webseite"
           facebook: "Facebook"
