--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -6,25 +6,24 @@ de:
       how:
         heading: "Wie funktioniert clarat?"
         text: |
-          Sämtliche Unterstützungsangebote für Kinder, Jugendliche und
-          Familien in Deiner Nähe. Gib Dein Anliegen ein und finde das
-          Angebot, das Dir wirklich weiter hilft. Wir sagen Dir auch noch, was
-          Du als nächstes tun musst, um das Angebot zu nutzen.
+          Gib ein, was dich bedrückt. Oder wähle aus unseren Themen aus. Schon
+          siehst du alle Hilfsangebote in deiner Nähe. Wir sagen dir auch, wie
+          du die Hilfe bekommst. Also ob du anrufen oder eine E-Mail schreiben
+          sollst. Oder einfach vorbeigehen kannst.
       whom:
         heading: "Für wen ist clarat?"
         text: |
-          clarat ist für alle da. Vor allem für Familien, Jugendliche und
-          Kinder auf der Suche nach Unterstützung. Aber auch für Menschen, die
-          erkennen, dass ein anderer Mensch Hilfe braucht. Erzieher zum
-          Beispiel. Oder Lehrer. Oder Ärzte. Anliegen eingeben, Angebot finden
-          und dann hin.
+          clarat ist für alle da. Für Kinder, Jugendliche und Familien. Hier
+          findest du Unterstützung bei Fragen und bei Problemen. Für dich, deine
+           Familie und deine Freunde. Oder auch für andere Menschen, die du
+           kennst und die Hilfe brauchen
       why:
         heading: "Warum gibt es clarat?"
         text: |
-          In Deutschland gibt es viele Unterstützungsangebote für Kinder,
-          Jugendliche und Familien. Allerdings sind diese selten leicht zu
-          finden. Mit clarat helfen wir Dir, schnell und unkompliziert zum
-          passenden Angebot in deiner Nähe zu kommen.
+          Mit clarat lässt sich einfach Hilfe finden. In Deutschland gibt es
+          viele Angebote, die Kinder, Jugendliche und Familien unterstützen. Sie
+          sind aber oft schwer zu finden. Wir helfen dir dabei. Wir zeigen dir,
+          welche Hilfe es in deiner Nähe gibt.
 
     not_found:
       title: "404"
