Wording change on about us

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -378,7 +378,7 @@ de:
 
     about:
       title: "Über Uns"
-      heading: "Über uns"
+      heading: "Wer steckt hinter clarat?"
       text: |
         clarat ist ein Projekt der gemeinnützigen Benckiser Stiftung Zukunft
         (www.benckiser-stiftung.org). Mit der Benckiser Stiftung fördern wir
