One typo per commit...

--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -394,7 +394,7 @@ de:
         Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie
         sieht schnell, was wichtig ist. Bei clarat ist sie im Research-Team. Sie
         kümmert sich besonders um Online- und Telefonangebote. Ihr Lieblingssong
-        ist La Prima Estate - Erlend Oye.
+        ist La Prima Estate von Erlend Oye.
       andrea: |
         Hat Interkulturelles Management studiert. Das heißt, sie weiß viel über
         Wirtschaft und Kultur. Sie arbeitet sehr genau. Bei clarat ist sie im
