--- a/config/locales/views/layouts/de.yml
+++ b/config/locales/views/layouts/de.yml
@@ -4,7 +4,7 @@ de:
       banner:
         teaser:
           text: "clarat.org wird gerade aufgebaut."
-          link: "Hier erfährst Du mehr"
+          link: "Hier erfährst du mehr"
       modal:
         beta_modal:
           text: |
