--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -120,7 +120,7 @@ de:
     show:
       what: "Worum geht's?"
       next_steps: "Was musst du tun?"
-      who: "Wer bietet diese Hilfe an?"
+      who: "Wo gibt’s die Hilfe?"
       obfuscated_email: |
         Diese E-Mail-Adresse wird zum Spam-Schutz durch JavaScript
         verschlüsselt. Bitte aktiviere JavaScript um sie lesen zu können.
