--- a/config/locales/views/organizations/de.yml
+++ b/config/locales/views/organizations/de.yml
@@ -1,6 +1,6 @@
 de:
   organizations:
     show:
-      who: "Wer hilft dir?"
+      who: "Was macht die Organisation??"
       where: "Wo ist die Organisation?"
       offers_all: "Welche Hilfe bietet diese Organisation?"
