--- a/config/locales/views/shareds/de.yml
+++ b/config/locales/views/shareds/de.yml
@@ -4,4 +4,4 @@ de:
       fill_field: "Bitte fülle dieses Feld aus"
     show:
       cta_report_errors: |
-        Enthält dieser Eintrag Fehler?
+        Hast du einen Fehler entdeckt?
