More wording changes

--- a/config/locales/models/contact_person/de.yml
+++ b/config/locales/models/contact_person/de.yml
@@ -2,4 +2,4 @@ de:
   contact_person:
     validations:
       incomplete: |
-        Entweder "Name", "Local Number 1", oder "Email" muss ausgefüllt werden.
+        Entweder "Name", "Local Number 1", oder "E-Mail" muss ausgefüllt werden.
