--- a/config/locales/models/contact_person/en.yml
+++ b/config/locales/models/contact_person/en.yml
@@ -2,4 +2,4 @@ en:
   contact_person:
     validations:
     incomplete: |
-      Either "Name", "Telephone", or "Email" needs to be present.
+      Either "Name", "Telephone", or "E-mail" needs to be present.
