--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -39,7 +39,7 @@ de:
         encounters:
           personal: "Persönlich"
           hotline: "Telefonisch"
-          email: "Email"
+          email: "E-Mail"
           chat: "Chat"
           forum: "Forum"
 
