for #273 - start implementing algolia js client for search & use handlebars for templates

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -47,3 +47,8 @@ de:
         - schwänzen
         - wohnen
       example_placeholder: "z.B. %{word}, …"
+    encounters:
+      hotline: "Telefonisch"
+      email: "Email"
+      chat: "Chat"
+      forum: "Forum"
