Tiny wording change

--- a/config/locales/views/offers/de.yml
+++ b/config/locales/views/offers/de.yml
@@ -38,7 +38,7 @@ de:
       single_search_result:
         encounters:
           personal: "Persönlich"
-          hotline: "Telefonisch"
+          hotline: "Telefon"
           email: "E-Mail"
           chat: "Chat"
           forum: "Forum"
