Preliminary put the google translate function into the footer

--- a/config/locales/views/layouts/de.yml
+++ b/config/locales/views/layouts/de.yml
@@ -39,6 +39,7 @@ de:
         about: "Über uns"
         faq: "Häufige Fragen"
         contact: "Kontakt"
+        blog: "Blog"
         impressum: "Impressum"
         tos: "Rechtliche Hinweise"
         privacy: "Datenschutzhinweise"
