--- a/config/locales/views/pages/de.yml
+++ b/config/locales/views/pages/de.yml
@@ -16,7 +16,7 @@ de:
           clarat ist für alle da. Für Kinder, Jugendliche und Familien. Hier
           findest du Unterstützung bei Fragen und bei Problemen. Für dich, deine
            Familie und deine Freunde. Oder auch für andere Menschen, die du
-           kennst und die Hilfe brauchen
+           kennst und die Hilfe brauchen.
       why:
         heading: "Warum gibt es clarat?"
         text: |
