--- a/config/locales/views/broadcast_mailer/de.yml
+++ b/config/locales/views/broadcast_mailer/de.yml
@@ -34,11 +34,11 @@ de:
         Mit freundlichen Grüßen,
 
         Anne Schulze
-        Clarat
+        clarat
         ein Projekt der Benckiser Stiftung Zukunft
 
         P.S.
-        - Einen kurzen Einführungsfilm zu Clarat sehen Sie hier:
+        - Einen kurzen Einführungsfilm zu clarat sehen Sie hier:
           %{vimeo_link}
         - Unsere Arbeitsschritte können Sie hier einsehen:
           %{blog_link}
